# Makefile for 
# Copyright (C) 2012 Massimo Marchi <Massimo.Marchi@cea.fr>
# $Header$
# $Log$
# what flags you want to pass to the C compiler & linker
AM_CXXFLAGS = -g0
AM_LDFLAGS = 

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
lib_LIBRARIES = libalglib.a
libalglib_a_SOURCES = alglibinternal.cpp alglibinternal.h alglibmisc.cpp\
	alglibmisc.h ap.cpp ap.h dataanalysis.cpp dataanalysis.h\
	diffequations.cpp diffequations.h fasttransforms.cpp\
	fasttransforms.h integration.cpp integration.h interpolation.cpp\
	interpolation.h linalg.cpp linalg.h optimization.cpp optimization.h\
	solvers.cpp solvers.h specialfunctions.cpp specialfunctions.h\
	statistics.cpp statistics.h stdafx.h 
